swagger article (list)
