# config/packages/nelmio_api_doc.yaml
@@ -167,3 +167,48 @@ nelmio_api_doc:
                                         example: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
                         '400':
                             description: Authentication error
+            /api/articles/page={page}:
+                get:
+                    tags:
+                        - Articles API
+                    description: Articles list
+                    produces:
+                        - application/json
+                    parameters:
+                        - name: page
+                          description: Page for list articles
+                          in: path
+                          required: true
+                          type: string
+                    responses:
+                        '200':
+                            description: Articles list successful
+                            schema:
+                                type: object
+                                properties:
+                                    articles:
+                                        type: object
+                                        properties:
+                                            id:
+                                                type: string
+                                                example: 1
+                                            title:
+                                                type: string
+                                                example: Title artile 1
+                                            text:
+                                                 type: string
+                                                 example: Text artile 1
+                                            image:
+                                                 type: string
+                                                 example: article_image.jpg
+                                            createdAt:
+                                                 type: string
+                                                 example: "2019-01-24T14:22:51+02:00"
+                                            approved:
+                                                 type: string
+                                                 example: true
+                                            likes:
+                                                 type: string
+                                                 example: 1
+                        '400':
+                            description: Bad request
